CSVs for questions

--- a/pokemon_multimodal_qa.ipynb
+++ b/pokemon_multimodal_qa.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,13 +89,17 @@
     "        model_output = text_model(**encoded_input)\n",
     "\n",
     "    text_embeddings = mean_pooling(model_output, encoded_input[\"attention_mask\"])\n",
+    "    text_embeddings = F.layer_norm(\n",
+    "        text_embeddings, normalized_shape=(text_embeddings.shape[1],)\n",
+    "    )\n",
+    "\n",
     "    text_embeddings = F.normalize(text_embeddings, p=2, dim=1)\n",
     "    return text_embeddings[0].cpu().detach().numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +108,7 @@
        "(768,)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,19 +130,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -148,7 +142,7 @@
        "})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +168,7 @@
        "(1302, 768)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,21 +216,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://stackoverflow.com/a/38250088\n",
-    "def softmax(x):\n",
-    "    e_x = np.exp(x - np.max(x))\n",
-    "    return e_x / e_x.sum(axis=0)\n",
-    "\n",
-    "\n",
-    "def image_lookup_from_text_query(query, n=5):\n",
+    "def image_lookup_from_text_query(query, n=10):\n",
     "    embed = get_text_embedding(\"search_query: \" + query)\n",
     "    cossims_text_image = embed @ image_embeddings.T\n",
-    "    # softmaxed_cossims = softmax(cossims_text_image)\n",
     "    top_idx = np.argsort(cossims_text_image)[::-1]\n",
+    "\n",
+    "    results = []\n",
     "\n",
     "    count = 0\n",
     "    for idx in top_idx:\n",
@@ -245,34 +234,114 @@
     "            poke_name = poke_dict[idx]\n",
     "            prob = cossims_text_image[idx]\n",
     "\n",
-    "            print(poke_name + \": \" + str(prob))\n",
+    "            results.append({\"id\": poke_id, \"name\": poke_name, \"prob\": prob})\n",
     "            count += 1\n",
     "            if count == n:\n",
-    "                break"
+    "                break\n",
+    "\n",
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vanillite: 0.086028405\n",
-      "Milcery: 0.07552162\n",
-      "Swanna: 0.06919962\n",
-      "Bergmite: 0.066432506\n",
-      "Magcargo: 0.062358268\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'id': 583, 'name': 'Vanillite', 'prob': 0.085194},\n",
+       " {'id': 869, 'name': 'Milcery', 'prob': 0.076221325},\n",
+       " {'id': 713, 'name': 'Bergmite', 'prob': 0.06910135},\n",
+       " {'id': 11, 'name': 'Caterpie', 'prob': 0.06868309},\n",
+       " {'id': 582, 'name': 'Swanna', 'prob': 0.06752206},\n",
+       " {'id': 703, 'name': 'Dedenne', 'prob': 0.0665906},\n",
+       " {'id': 220, 'name': 'Magcargo', 'prob': 0.06607176},\n",
+       " {'id': 771, 'name': 'Palossand', 'prob': 0.06571421},\n",
+       " {'id': 712, 'name': 'Gourgeist-Average', 'prob': 0.06521829},\n",
+       " {'id': 577, 'name': 'Gothitelle', 'prob': 0.06519396}]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "query = \"ice cream cone\"\n",
+    "query = \"What looks like a ice cream cone?\"\n",
     "\n",
-    "image_lookup_from_text_query(query)"
+    "results = image_lookup_from_text_query(query)\n",
+    "results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "fieldnames = [\"id\", \"name\", \"prob\"]\n",
+    "\n",
+    "with open(\"q1.csv\", \"w\") as f:\n",
+    "    w = csv.DictWriter(f, fieldnames=fieldnames)\n",
+    "    w.writeheader()\n",
+    "    for row in results:\n",
+    "        w.writerow(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 718, 'name': 'Yveltal', 'prob': 0.095142975},\n",
+       " {'id': 851, 'name': 'Sizzlipede', 'prob': 0.094870396},\n",
+       " {'id': 631, 'name': 'Mandibuzz', 'prob': 0.093551904},\n",
+       " {'id': 979, 'name': 'Tatsugiri', 'prob': 0.09278333},\n",
+       " {'id': 218, 'name': 'Ursaring', 'prob': 0.09183963},\n",
+       " {'id': 555, 'name': 'Darumaka', 'prob': 0.09001139},\n",
+       " {'id': 467, 'name': 'Electivire', 'prob': 0.0898506},\n",
+       " {'id': 890, 'name': 'Zamazenta', 'prob': 0.0875105},\n",
+       " {'id': 850, 'name': 'Toxtricity-Amped', 'prob': 0.08745665},\n",
+       " {'id': 727, 'name': 'Torracat', 'prob': 0.08664321}]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"What monster has flames coming out of it?\"\n",
+    "\n",
+    "results = image_lookup_from_text_query(query)\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"q2.csv\", \"w\") as f:\n",
+    "    w = csv.DictWriter(f, fieldnames=fieldnames)\n",
+    "    w.writeheader()\n",
+    "    for row in results:\n",
+    "        w.writerow(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
