--- a/pokemon_multimodal_qa.ipynb
+++ b/pokemon_multimodal_qa.ipynb
@@ -16,6 +16,7 @@
    ],
    "source": [
     "import os\n",
+    "import csv\n",
     "\n",
     "import numpy as np\n",
     "import requests\n",
@@ -216,14 +217,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"{1: 'Bulbasaur', 2: 'Ivysaur', 3: 'Venusaur', 4: 'Charmander', 5: 'Charmeleon', 6: 'Charizard', 7: '\""
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(poke_dict)[:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
+    "fieldnames = [\"id\", \"name\", \"prob\"]\n",
+    "\n",
+    "\n",
     "def image_lookup_from_text_query(query, n=10):\n",
     "    embed = get_text_embedding(\"search_query: \" + query)\n",
     "    cossims_text_image = embed @ image_embeddings.T\n",
     "    top_idx = np.argsort(cossims_text_image)[::-1]\n",
+    "\n",
+    "    # print(top_idx[:n])\n",
     "\n",
     "    results = []\n",
     "\n",
@@ -231,7 +257,7 @@
     "    for idx in top_idx:\n",
     "        poke_id = poke_ids[idx]\n",
     "        if poke_id in poke_dict.keys():\n",
-    "            poke_name = poke_dict[idx]\n",
+    "            poke_name = poke_dict[idx + 1]  # one-index\n",
     "            prob = cossims_text_image[idx]\n",
     "\n",
     "            results.append({\"id\": poke_id, \"name\": poke_name, \"prob\": prob})\n",
@@ -239,101 +265,143 @@
     "            if count == n:\n",
     "                break\n",
     "\n",
+    "    return results\n",
+    "\n",
+    "\n",
+    "def similarity_to_csv(query, csv_index):\n",
+    "    results = image_lookup_from_text_query(query)\n",
+    "\n",
+    "    with open(f\"q{csv_index}.csv\", \"w\") as f:\n",
+    "        w = csv.DictWriter(f, fieldnames=fieldnames)\n",
+    "        w.writeheader()\n",
+    "        for row in results:\n",
+    "            w.writerow(row)\n",
+    "\n",
     "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': 583, 'name': 'Vanillite', 'prob': 0.085194},\n",
-       " {'id': 869, 'name': 'Milcery', 'prob': 0.076221325},\n",
-       " {'id': 713, 'name': 'Bergmite', 'prob': 0.06910135},\n",
-       " {'id': 11, 'name': 'Caterpie', 'prob': 0.06868309},\n",
-       " {'id': 582, 'name': 'Swanna', 'prob': 0.06752206},\n",
-       " {'id': 703, 'name': 'Dedenne', 'prob': 0.0665906},\n",
-       " {'id': 220, 'name': 'Magcargo', 'prob': 0.06607176},\n",
-       " {'id': 771, 'name': 'Palossand', 'prob': 0.06571421},\n",
-       " {'id': 712, 'name': 'Gourgeist-Average', 'prob': 0.06521829},\n",
-       " {'id': 577, 'name': 'Gothitelle', 'prob': 0.06519396}]"
+       "[{'id': 583, 'name': 'Vanillish', 'prob': 0.08493237},\n",
+       " {'id': 869, 'name': 'Alcremie', 'prob': 0.075992346},\n",
+       " {'id': 713, 'name': 'Avalugg', 'prob': 0.06907362},\n",
+       " {'id': 11, 'name': 'Metapod', 'prob': 0.06854135},\n",
+       " {'id': 582, 'name': 'Vanillite', 'prob': 0.06713396},\n",
+       " {'id': 703, 'name': 'Carbink', 'prob': 0.066326044},\n",
+       " {'id': 220, 'name': 'Swinub', 'prob': 0.06581724},\n",
+       " {'id': 771, 'name': 'Pyukumuku', 'prob': 0.065558955},\n",
+       " {'id': 577, 'name': 'Solosis', 'prob': 0.06508828},\n",
+       " {'id': 712, 'name': 'Bergmite', 'prob': 0.06482702}]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query = \"What looks like a ice cream cone?\"\n",
+    "query = \"What looks like an ice cream cone?\"\n",
     "\n",
-    "results = image_lookup_from_text_query(query)\n",
-    "results"
+    "similarity_to_csv(query, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import csv\n",
-    "\n",
-    "fieldnames = [\"id\", \"name\", \"prob\"]\n",
-    "\n",
-    "with open(\"q1.csv\", \"w\") as f:\n",
-    "    w = csv.DictWriter(f, fieldnames=fieldnames)\n",
-    "    w.writeheader()\n",
-    "    for row in results:\n",
-    "        w.writerow(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': 718, 'name': 'Yveltal', 'prob': 0.095142975},\n",
-       " {'id': 851, 'name': 'Sizzlipede', 'prob': 0.094870396},\n",
-       " {'id': 631, 'name': 'Mandibuzz', 'prob': 0.093551904},\n",
-       " {'id': 979, 'name': 'Tatsugiri', 'prob': 0.09278333},\n",
-       " {'id': 218, 'name': 'Ursaring', 'prob': 0.09183963},\n",
-       " {'id': 555, 'name': 'Darumaka', 'prob': 0.09001139},\n",
-       " {'id': 467, 'name': 'Electivire', 'prob': 0.0898506},\n",
-       " {'id': 890, 'name': 'Zamazenta', 'prob': 0.0875105},\n",
-       " {'id': 850, 'name': 'Toxtricity-Amped', 'prob': 0.08745665},\n",
-       " {'id': 727, 'name': 'Torracat', 'prob': 0.08664321}]"
+       "[{'id': 53, 'name': 'Persian', 'prob': 0.07966652},\n",
+       " {'id': 726, 'name': 'Torracat', 'prob': 0.075021714},\n",
+       " {'id': 431, 'name': 'Glameow', 'prob': 0.07453124},\n",
+       " {'id': 844, 'name': 'Sandaconda', 'prob': 0.07432804},\n",
+       " {'id': 1014, 'name': 'Okidogi', 'prob': 0.07432228},\n",
+       " {'id': 196, 'name': 'Espeon', 'prob': 0.07034817},\n",
+       " {'id': 39, 'name': 'Jigglypuff', 'prob': 0.07002451},\n",
+       " {'id': 432, 'name': 'Purugly', 'prob': 0.06959056},\n",
+       " {'id': 509, 'name': 'Purrloin', 'prob': 0.069366224},\n",
+       " {'id': 725, 'name': 'Litten', 'prob': 0.068936065}]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query = \"What monster has flames coming out of it?\"\n",
+    "query = \"What looks like an orange cat?\"\n",
     "\n",
-    "results = image_lookup_from_text_query(query)\n",
-    "results"
+    "similarity_to_csv(query, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 201, 'name': 'Unown', 'prob': 0.0817163},\n",
+       " {'id': 114, 'name': 'Tangela', 'prob': 0.07049845},\n",
+       " {'id': 44, 'name': 'Gloom', 'prob': 0.07007043},\n",
+       " {'id': 808, 'name': 'Meltan', 'prob': 0.06915918},\n",
+       " {'id': 355, 'name': 'Duskull', 'prob': 0.06906678},\n",
+       " {'id': 101, 'name': 'Electrode', 'prob': 0.068546444},\n",
+       " {'id': 205, 'name': 'Forretress', 'prob': 0.06788925},\n",
+       " {'id': 960, 'name': 'Wiglett', 'prob': 0.06769621},\n",
+       " {'id': 455, 'name': 'Carnivine', 'prob': 0.066377126},\n",
+       " {'id': 524, 'name': 'Roggenrola', 'prob': 0.06605223}]"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "with open(\"q2.csv\", \"w\") as f:\n",
-    "    w = csv.DictWriter(f, fieldnames=fieldnames)\n",
-    "    w.writeheader()\n",
-    "    for row in results:\n",
-    "        w.writerow(row)"
+    "query = \"What has only one eye?\"\n",
+    "\n",
+    "similarity_to_csv(query, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 742, 'name': 'Cutiefly', 'prob': 0.10017799},\n",
+       " {'id': 165, 'name': 'Ledyba', 'prob': 0.09996718},\n",
+       " {'id': 840, 'name': 'Applin', 'prob': 0.09831544},\n",
+       " {'id': 743, 'name': 'Ribombee', 'prob': 0.09511077},\n",
+       " {'id': 664, 'name': 'Scatterbug', 'prob': 0.0947648},\n",
+       " {'id': 953, 'name': 'Rellor', 'prob': 0.094578125},\n",
+       " {'id': 267, 'name': 'Beautifly', 'prob': 0.09351358},\n",
+       " {'id': 401, 'name': 'Kricketot', 'prob': 0.09324673},\n",
+       " {'id': 139, 'name': 'Omastar', 'prob': 0.09290971},\n",
+       " {'id': 48, 'name': 'Venonat', 'prob': 0.091740824}]"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"What is a cute bug?\"\n",
+    "\n",
+    "similarity_to_csv(query, 4)"
    ]
   },
   {
