--- a/pokemon_lookup.ipynb
+++ b/pokemon_lookup.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import csv\n",
+    "\n",
     "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +31,7 @@
        " {'id': 10, 'name': 'caterpie'}]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,25 +59,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "poke_dict = {x[\"id\"]: x[\"name\"].title() for x in pokemon}"
+    "poke_dict = {x[\"id\"]: x[\"name\"] for x in pokemon}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Pikachu'"
+       "'pikachu'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,11 +87,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively write to `csv`:\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"pokemon.csv\", \"w\") as f:\n",
+    "    w = csv.DictWriter(f, fieldnames=[\"id\", \"name\"])\n",
+    "    w.writeheader()\n",
+    "    for poke in pokemon:\n",
+    "        w.writerow(poke)"
+   ]
   }
  ],
  "metadata": {
